Update gitmodules to use https instead of ssh

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/seq_utils"]
 	path = src/seq_utils
-	url = git@github.com:jabalazs/seq_utils
+	url = https://github.com/jabalazs/seq_utils
